Widen dropdown-menu to avoid wrapping the display toggles text, when in the panel layout,  2602bf3 15905 Nov 28 19:16 frontend/app/styles/app.css

--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -206,6 +206,13 @@ circle.radio.toggle.chartType.pushed
 
 /* ---------------------------------- */
 
+/* in the panel layout, widen to avoid wrapping the display toggles text.  */
+.panel > .panel-body > .bordered.control-panel,
+.panel > .panel-body > .bordered.control-panel > div {
+  width: 100%;
+}
+/* ---------------------------------- */
+
 /* These selectors are for HTML and SVG respectively; they are bundled so that
 the user can easily edit them at the same time, keeping colours in sync.  */
 div.drawing-controls > div.flowButtons > .flowButton.alias,
